src/test/resources/insight/annotators/UnusedParameters.soy
{namespace space}

{element .foo}
  {@param <warning descr="Parameter unusedParam is unused.">unusedParam</warning>: string}
  {@state <warning descr="State variable unusedState is unused.">unusedState</warning>:= 'test'}
{/element}

{template .bar}
  {@param <error descr="Parameter unusedParam is unused.">unusedParam</error>: string}
{/template}
